Code/tests now clean with RuboCop 0.39.1, fixing subtle test bug.
Note the caveats in the modified `.rubocop.yml`.
`Style/FrozenStringLiteralComment` is disabled by default, simply because
it would require adding a comment to *every* single `.rb` file that won't
have any actual effect until Ruby 3.0. However, enabling it *did* allow
us to find and fix a subtle test-fixture bug in `body_marker_test.rb`;
see if you can spot it. :grinning:

Note for future maintainers: as any files are changed henceforth, add the
Ruby 3.0 frozen-string pragma comment to the files being modified and
ensure that all tests still pass. Once RuboCop's
`Style/FrozenStringLiteralComment` cop can be enabled in `.rubocop.yml`
without error, leave it enabled (i.e., after all source and test files
have the pragma comment).

262 tests, 316 assertions, 0 failures, 0 errors, 0 skips
Coverage: 2187 / 2189 LOC (99.91%) covered.
RuboCop: 64 files inspected, no offenses detected
Flay: Total score 0
Flog: Total 616.7; method average 4.0; max 8.1 (Prolog::UseCases::SummariseContent::KeywordCounter#list_keywords_by_count)
Reek: 0 warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,7 @@
 
+AllCops:
+  TargetRubyVersion: 2.3
+
 Metrics/AbcSize:
   Exclude:
     - test/prolog/use_cases/propose_edit_contribution_test.rb
@@ -6,3 +9,11 @@ Metrics/AbcSize:
 Metrics/MethodLength:
   Exclude:
     - test/prolog/use_cases/propose_edit_contribution_test.rb
+
+# New to 0.39.x
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/NestedParenthesizedCalls:
+  Enabled: false
