Gemspec updated to use current versions of all* specified Gems.
We've been here before. 😞

* With the exception of `activemodel`, locked to 4.2.7.1 because all
attempts to use 5.0.0.1 produce a `NoMethodError` while bundling.

Also debuting our new system for using Gemsets in `rbenv`, using the
new-to-us [`rbenv-gemset`](https://github.com/jf/rbenv-gemset) plugin.
This will greatly improve repeatability of bundles/tests of versions
going forward, preventing the sort of disaster that took a week out of
our lives recently.

No statistics; test breaks due to not-yet-updated code. This is a
breadcrumb.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /.bundle/
+/.rbenv-gemsets
 /.yardoc
 /Gemfile.lock
 /_yardoc/
 /coverage/
 /doc/
+/gemsets/
+!/gemsets/new-setup-and-test.sh
 /pkg/
 /spec/reports/
 /tmp/
