Back to a green bar. Yes, this is a brick house sideways.
All code updated to use new `Dry::Struct` syntax and semantics where
appropriate, which differ importantly from the previous use of Virtus.

RuboCop and Reek have each added new checks, several of which make sense
but aren't things we want to immediately slap on a hotfix for, so there
have been changes to the RuboCop config and several Reek-quieting
comments added throughout the code.

There's still a massive amount of cleanup that could/should be done,
separate from the "get rid of mutable, interactive form objects" spike
we've been on for the last several releases. Pffffft.

Pinging Issue #80; we really would love to get defaults working again in
`Dry::Struct` attribute definitions, to reduce boilerplate.

310 tests, 355 assertions, 0 failures, 0 errors, 26 skips
Coverage: 2865 / 2867 LOC (99.93%) covered.
RuboCop: 101 files inspected, no offenses detected
Flay: Total score 0
Flog: Total 832.2; method average 3.3; max 6.6 (Prolog::UseCases::AcceptSingleProposal#entity_attribs)
Reek: 0 warnings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,10 @@ Metrics/MethodLength:
 
 Style/NestedParenthesizedCalls:
   Enabled: false
+
+# New to 0.44.0
+
+Metrics/BlockLength:
+  Max: 300
+  Include:
+    - 'test/**/*_test.rb'
